refactor: general post refactoring

--- a/_posts/2022-10-18-eve-ng-rce.md
+++ b/_posts/2022-10-18-eve-ng-rce.md
@@ -22,7 +22,7 @@ all of my process, from recon to RCE, in:
 
 *Let's goo!*
 
-### Phase 1: Inspecting Source Code
+#### Phase 1: Inspecting Source Code
 
 From [EVE-NG Website](https://www.eve-ng.net/index.php/download/) I downloaded the 2.0.3-112 Community version OVF. 
 It was locally available at [192.168.1.26](http://192.168.1.26).
@@ -61,7 +61,7 @@ A quick sight to these functions gave me a hint on which ones I should focus on:
 | apiExportLabs     | RCE                    | Possible chained RCE                             |
 
 
-### Phase 2: Exploit Theory
+#### Phase 2: Exploit Theory
 
 A deeper inspection led me to this plan:
 
@@ -93,7 +93,7 @@ Function *apiExportLabs* : `html\includes\api_labs.php`
 
 > **NOTE**: Considering that path delimiters in Linux are forward slashes (/) while I was in Windows environment, I had to inject a payload that didn’t contain such characters (/, \: in Windows also \ is path delimiter). I opted to inject as zip argument a bash command.
 
-### Phase 3: PoC
+#### Phase 3: PoC
 
 1) **Login as Admin**
 - To exploit this vulnerability, we must have enough privileges to create a new Lab.
